--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -1,5 +1,6 @@
 .site-header {
-  position: relative;
+  position: fixed;
+  z-index: 6;
   display: block;
   background: #132118;
   padding: 30px 0 0;
@@ -10,7 +11,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: fixed;
     padding: 0;
     height: 100%;
   }
